[tool.poetry]
name = "au-nsw-maps"
version = "0.1.0"
description = "static maps for new south wales"
authors = ["Ryan McCarthy <ryan.mccarthy@salo.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.10.2"
folium = "^0.12.1"
folium-glify-layer = "^0.3.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
